--- a/Cloudents.Spitball/App_Themes/icons.less
+++ b/Cloudents.Spitball/App_Themes/icons.less
@@ -40,7 +40,10 @@ Single-colored icons can be modified like so:
 }
 
 .icon-jobs {
-	width: 0.4541015625em;
+    /*width: 0.4541015625em;*/
+    height: 1.5em;
+    top: 17%;
+    left: 24%;
 }
 
 .icon-normal-logo {
@@ -65,8 +68,11 @@ Single-colored icons can be modified like so:
 }
 
 .icon-purchase {
-	width: 0.7998046875em;
+    /*width: 0.7998046875em;*/
+    width: 1.2em;
+    height: 1.2em;
 }
+
 
 .icon-shape {
 	width: 0.9521484375em;
