--- a/Cloudents.Spitball/Views/Home/_Layout.cshtml
+++ b/Cloudents.Spitball/Views/Home/_Layout.cshtml
@@ -1,12 +1,14 @@
 ﻿@using System.Web.Optimization
 
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="myApp">
 <head>
     <meta name="ad.size" content="width=300,height=250"/>
 	<meta name="viewport" content="width=device-width" />
 	<title>Index</title>
     @Styles.Render("~/My/Css")
+
+    @*@Scripts.Render("~/my/js")*@
     <script type = 'text/javascript' >
         var appInsights=window.appInsights||function(config)
         {
@@ -20,20 +22,20 @@
         appInsights.trackPageView();
     </script>
 	</head>
-<body>
-<header>
+<body ng-controller="HomeController as ctrl">
+<header ng-class="{'section-open':ctrl.sectionOpen}" ng-init="ctrl.sectionOpen=false">
 	<div class="grid">
-		<div class="logo">
+        <div class="logo" ng-click="ctrl.sectionOpen=true">
 			<picture>
 				<source media="(min-width: 641px) and (max-width: 1365px)" srcset="/App_Themes/Images/small-logo.svg">
 				<img  src="/App_Themes/Images/normal-logo.svg" alt="logo">
 			</picture>
 		</div>
 		<div id="searchArea">
-			<span id="searchInput">
+			<span id="searchInput" class="color-{{ctrl.sec}}">
 				<span class="section-icon">
-					<svg class="icon icon-flashcard">
-						<use xlink:href="/App_Themes/Images/icons.svg#icon-flashcard"></use>
+					<svg class="icon icon-{{ctrl.sec}}">
+						<use xlink:href="{{'/App_Themes/Images/icons.svg#icon-'+ctrl.sec}}"></use>
 					</svg>
 					</span>
 				<input id="transcript" class="speech-input" type="search">
@@ -59,41 +61,65 @@
 				<use xlink:href="/App_Themes/Images/icons.svg#icon-menu"></use>
 			</svg>
 		</div>
+        <div inline-flex class="sections" ng-show="ctrl.sectionOpen">
+            <input id="ask" type="radio" value="ask-copy" ng-model="ctrl.sec" name="sec" ><label ng-class="{'color-ask-copy':(ctrl.sec=='ask-copy')}" for="ask">Ask</label>
+            <input id="note" type="radio" value="note" ng-model="ctrl.sec" name="sec" ><label ng-class="{'color-note':(ctrl.sec=='note')}" for="note">Note</label>
+            <input id="flashcard" type="radio" value="flashcard" ng-model="ctrl.sec" name="sec"><label ng-class="{'color-flashcard':(ctrl.sec=='flashcard')}" for="flashcard">Flashcard</label>
+            <input id="tutor" type="radio" value="tutor-copy" ng-model="ctrl.sec" name="sec"><label ng-class="{'color-tutor-copy':(ctrl.sec=='tutor-copy')}" for="tutor">Tutor</label>
+            <input id="job" type="radio" value="jobs" ng-model="ctrl.sec" name="sec"><label ng-class="{'color-jobs':(ctrl.sec=='jobs')}" for="job">Job</label>
+            <input id="book" type="radio" value="book" ng-model="ctrl.sec" name="sec"><label ng-class="{'color-book':(ctrl.sec=='book')}" for="book">Book</label>
+            <input id="purchase" type="radio" value="purchase" ng-model="ctrl.sec" name="sec"><label ng-class="{'color-purchase':(ctrl.sec=='purchase')}" for="purchase">Purchase</label>
+       <div class="bunner hide_641"></div>
+        </div>
 	</div>
 </header>
 <section>
-	<input id="menu-checkbox" type="checkbox" class="hide_641" />
+	<input id="menu-checkbox" type="checkbox" class="hide_641" ng-model="ctrl.isOpen" ng-class="{'section-open':ctrl.sectionOpen}"/>
 	<aside>
 		<label class="upper">search type</label>
 		<ul>
-			<li>
+			<li ng-click="ctrl.changeSection('ask-copy')" ng-class="{'selected':(ctrl.sec=='ask-copy')}">
 				<div class="ask">
 					<svg class="icon icon-ask-copy">
 						<use xlink:href="/App_Themes/Images/icons.svg#icon-ask-copy"></use>
 					</svg>
 				</div><span>ask</span>
 			</li>
-			<li>
+			<li ng-click="ctrl.changeSection('note')" ng-class="{'selected':(ctrl.sec=='note')}">
 				<div class="note">
 					<svg class="icon icon-note">
 						<use xlink:href="/App_Themes/Images/icons.svg#icon-note"></use>
 					</svg>
 				</div><span>notes</span>
 			</li>
-			<li>
+			<li ng-click="ctrl.changeSection('flashcard')" ng-class="{'selected':(ctrl.sec=='flashcard')}">
 				<div class="flashcard">
 					<svg class="icon icon-flashcard">
 						<use xlink:href="/App_Themes/Images/icons.svg#icon-flashcard"></use>
 					</svg>
 				</div><span>flashcards</span>
 			</li>
-			<li>
+			<li ng-click="ctrl.changeSection('tutor-copy')" ng-class="{'selected':(ctrl.sec=='tutor-copy')}">
 				<div class="tutor">
 					<svg class="icon icon-tutor-copy">
 						<use xlink:href="/App_Themes/Images/icons.svg#icon-tutor-copy"></use>
 					</svg>
 				</div><span>tutor</span>
 			</li>
+            <li ng-click="ctrl.changeSection('jobs')" ng-class="{'selected':(ctrl.sec=='jobs')}">
+                <div class="flashcard jobs color-jobs">
+                    <svg class="icon icon-jobs">
+                        <use xlink:href="/App_Themes/Images/icons.svg#icon-jobs"></use>
+                    </svg>
+                </div><span class="capitalize">jobs</span>
+            </li>
+            <li ng-click="ctrl.changeSection('purchase')" ng-class="{'selected':(ctrl.sec=='purchase')}">
+                <div class="flashcard color-purchase">
+                    <svg class="icon icon-purchase">
+                        <use xlink:href="/App_Themes/Images/icons.svg#icon-purchase"></use>
+                    </svg>
+                </div><span class="capitalize">purchase</span>
+            </li>
 		</ul>
 		<label class="upper">contribute</label>
 		<ul>
@@ -137,7 +163,9 @@
 	</aside>
 	<div class="content">@RenderBody()</div>
 </section>
-@Scripts.Render("~/bundles/angularjs")
+    @Scripts.Render("~/bundles/angularjs")
+    <script src="~/Scripts/app/home.controller.js"></script>
+    @*@Scripts.Render("~/My/Js")*@
 <script>
 	function startDictation() {
 
