--- a/Cloudents.Spitball/App_Themes/site.less
+++ b/Cloudents.Spitball/App_Themes/site.less
@@ -144,7 +144,7 @@ body {
 		}
 	}
 
-	.color-ask-copy {
+	.color-ask {
 		background: @ocean-blue !important;
 	}
 	.color-create-flashcard{
@@ -161,7 +161,7 @@ body {
 		background: @coral !important;
 	}
 
-	.color-tutor-copy {
+	.color-tutor {
 		background: @sap-green !important;
 	}
 
@@ -394,12 +394,12 @@ body {
 						position: relative;
 					}
 
-					.icon-ask-copy {
+					.icon-ask {
 						position: relative;
 						top: 0.2em;
 					}
 
-					.icon-tutor-copy {
+					.icon-tutor {
 						position: relative;
 						top: 0.3em;
 						padding-right: 0.2em;
